--- a/css/style.css
+++ b/css/style.css
@@ -9691,8 +9691,8 @@ textarea.form-control {
 
 @font-face {
     font-family: 'dosisextralight';
-    src: url('fonts/dosis-variablefont_wght.woff2') format('woff2'),
-         url('font/dosis-variablefont_wght.woff') format('woff');
+    src: url('../fonts/dosis-variablefont_wght.woff2') format('woff2'),
+         url('../font/dosis-variablefont_wght.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
