--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
   box-sizing: border-box; }
 
 html {
-  font-family:  'Dosis';
+  font-family:  'dosisregular';
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
@@ -51,7 +51,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: 'Dosis',Arial, Helvetica, sans-serif,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'dosisregular',Arial, Helvetica, sans-serif,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -7980,7 +7980,7 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  font-family:  'Dosis', Arial, Helvetica, sans-serif;
+  font-family:  'dosisregular', Arial, Helvetica, sans-serif;
   background: #fff;
   font-size: 16px;
   line-height: 1.8;
@@ -9690,9 +9690,9 @@ textarea.form-control {
 
 
 @font-face {
-    font-family: 'dosisextralight';
-    src: url('../fonts/dosis-variablefont_wght.woff2') format('woff2'),
-         url('../font/dosis-variablefont_wght.woff') format('woff');
+    font-family: 'dosisregular';
+    src: url('../fonts/dosis-regular-webfont.woff2') format('woff2'),
+         url('../fonts/dosis-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
