--- a/css/style.css
+++ b/css/style.css
@@ -9697,3 +9697,7 @@ textarea.form-control {
     font-style: normal;
 
 }
+
+.owl-carousel.owl-drag .owl-item {
+  touch-action: pan-y !important;
+}
