--- a/css/style.css
+++ b/css/style.css
@@ -8116,7 +8116,7 @@ h1, h2, h3, h4, h5,
     color: #1eaaf1; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-        color: #fff; } }
+        color: #52b4e7; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: #000000 !important;
