--- a/css/osapiens_stlye_sheet.css
+++ b/css/osapiens_stlye_sheet.css
@@ -3216,3 +3216,9 @@ color: black
 #white_logo_img{
 width: 50%
 }
+nav-sub-item active{
+color: #FFFFFF
+}
+.nav-main-item.active{
+color: #4BC676
+}
