--- a/css/osapiens_stlye_sheet.css
+++ b/css/osapiens_stlye_sheet.css
@@ -3214,11 +3214,17 @@ color: black
 }
 
 #white_logo_img{
-width: 100%
+max-height: 42px;
 }
 nav-sub-item active{
 color: #FFFFFF
 }
 .nav-main-item.active{
 color: #4BC676
+}
+.nav-main-item.active svg{
+fill: #4BC676
+}
+.nav-sub-item.active svg, .nav-sub-item:hover svg {
+ fill: #ffffff;
 }
