--- a/css/osapiens_stlye_sheet.css
+++ b/css/osapiens_stlye_sheet.css
@@ -2277,12 +2277,12 @@ select[multiple]:focus option:checked {
 
 .nav-sub-item.active,
 .nav-sub-item:hover {
-  color: #006992;
+  color: #ffffff;
 }
 
 .nav-sub-item.active svg,
 .nav-sub-item:hover svg {
-  fill: #006992;
+  fill: #ffffff;
 }
 
 .nav-sub-icon svg {
