--- a/css/osapiens_stlye_sheet.css
+++ b/css/osapiens_stlye_sheet.css
@@ -3237,3 +3237,6 @@ background:#ffffff !important;
 .table-container .top-panel {
     background: #000000 !important;
 }
+.tabs{
+color: #000000 !important;
+}
