--- a/css/osapiens_stlye_sheet.css
+++ b/css/osapiens_stlye_sheet.css
@@ -3243,3 +3243,6 @@ color: #000000 !important;
 li {
 background-color: #000000 !important;
 }
+.btn, .btn-large {
+background-color: #4BC676 !important;
+}
