--- a/css/osapiens_stlye_sheet.css
+++ b/css/osapiens_stlye_sheet.css
@@ -2080,6 +2080,8 @@ select[multiple]:focus option:checked {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  background: #FFFFFF;
+	
 }
 
 .navigation.hidden~#mainWrapper {
