--- a/css/osapiens_stlye_sheet.css
+++ b/css/osapiens_stlye_sheet.css
@@ -2241,7 +2241,7 @@ select[multiple]:focus option:checked {
 .nav-sub {
   position: relative;
   padding-top: 43px;
-  background: #4BC676;
+  background: #424242;
   color: #FFFFFF;
   width: 200px;
   -webkit-transition: width 0.6s ease;
