--- a/css/osapiens_stlye_sheet.css
+++ b/css/osapiens_stlye_sheet.css
@@ -3019,7 +3019,7 @@ border: 0;
 
   font-weight: bolder;
   color:white;
-  background-color: #4BC676;
+  background-color: #3bb164 /*#4BC676*/;
   padding:1em;
   border: 0;
   border-style: solid;
